--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    
-    <button id="btn">click </button>
+    <button class="btn btn-primary" id="btn">click</button>
     <script src="/js/all.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery-3.6.0.min.js"></script>
